fix: added margin-bottom to col-4 for proper row spacing between department cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ ul {
 .col-4 {
   width: 33.333%;
   padding: 0 15px;
+  margin-bottom: 30px;
 }
 
 .col-3 {
